# three-kingdom

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  design.md  main.py  pyproject.toml  start.bat
.hallmark/: log.json
.obsidian/: graph.json  workspace.json
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  logging.py  progress.py
backend/app/crawler/: downloader.py  pdf_parser.py  pipeline.py  scholar.py
backend/app/kg/: corpus_import.py  dedup.py  extractor.py  pipeline.py  quality_gate.py  review.py  text_splitter.py
backend/app/prompts/: __init__.py  identity.md  reflection.md  rules.md
backend/app/rag/: agent.py  embeddings.py  memory.py  reranker.py  vectorstore.py  wiki.py
backend/app/tools/: caj_converter.py  ocr.py  translator.py
backend/app/utils/: parsers.py  year_parser.py
backend/eval/: benchmark.json  run_eval.py
backend/scripts/: ingest_qinhan.py
docs/: TODO.md  learning-schedule.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  tokens.css
frontend/src/components/: ChatPipelineProgress.tsx  EmptyState.tsx  ErrorBoundary.tsx  InkLoader.tsx  InkProgress.tsx  SessionSidebar.tsx
frontend/src/contexts/: ChatContext.tsx  TaskContext.tsx
frontend/src/pages/: ChatPage.tsx  CrawlPage.tsx  DataPage.tsx  GraphPage.tsx  ReviewPage.tsx  WikiPage.tsx
frontend/src/pages/data/: ExtractSection.tsx  IngestSection.tsx  IngestionFilesSection.tsx  RawFilesSection.tsx  Section.tsx  StatsSection.tsx  UploadSection.tsx  index.ts
frontend/src/services/: api.ts
scripts/: screenshot.js
