[project]
name = "three-kingdom"
version = "0.1.0"
description = "三国历史知识库 - Agentic RAG + 知识图谱"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # Vector store
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    # Embedding & Reranker
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "torch>=2.5.0",
    # Text processing
    "pdfplumber>=0.11.0",
    # Web crawling
    "scholarly>=1.7.0",
    "httpx>=0.27.0",
    # Data models
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]
# 格式转换工具依赖（translator.py）
converters = [
    "python-docx>=1.1.0",    # .docx
    "beautifulsoup4>=4.12.0", # .html/.xml
    "lxml>=5.0.0",            # XML/HTML parser
    "striprtf>=0.0.26",       # .rtf
    "odfpy>=1.4.0",           # .odt
    "ebooklib>=0.18.0",       # .epub
    "mobi>=0.3.0",            # .mobi (Kindle)
]
# OCR 支持（图片型 PDF 识别）
ocr = [
    "paddlepaddle>=2.5.0",    # PaddlePaddle 深度学习框架
    "paddleocr>=2.7.0",       # PaddleOCR 文字识别
    "pdf2image>=1.16.0",      # PDF 转图片
    "Pillow>=10.0.0",         # 图像处理
]

[tool.uv.sources]
torch = { path = "torch-2.12.0+cu130-cp313-cp313-win_amd64.whl" }
